--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </nav>
             </div>
         </header>
+        <img src="github-header-image.png"/>
 
         <main class="px-3">
             <h1>Hello there!!</h1>
