--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             -moz-user-select: none;
             user-select: none;
         }
+        #header-img {
+            width: 42em;
+        }
 
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
@@ -27,7 +30,7 @@
         }
     </style>
     <link href="css/cover.css" rel="stylesheet">
-    <title>The Technical Journal</title>
+    <title>Vikram Gulia</title>
 </head>
 
 <body class="d-flex h-100 text-center">
@@ -35,14 +38,14 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-start mb-0">Geeky!</h3>
+                <h3 class="float-md-start mb-0">VG</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="/views/calculator.html">Calculator</a>
                     <a class="nav-link" href="#">Contact</a>
                 </nav>
+                <img id="header-img" src="github-header-image.png"/>
             </div>
-            <img src="github-header-image.png"/>
         </header>
 
         <main class="px-3">
